# tpm2-initramfs-tool

./: .clang-format  CHANGELOG.md  Makefile.am  README.md  configure.ac  tpm2-initramfs-tool.1
debian/: changelog  control  copyright  manpages  rules  watch
include/: tpm2-initramfs-tool.h
src/: libtpm2-initramfs-tool.c  tpm2-initramfs-tool.c
test/: test-tpm2-initramfs-tool-base32enc.c  test-tpm2-initramfs-tool.sh  tpm2-initramfs-tool.sh
